# SHIFT-assignment

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.db
app/: auth.py  database.py  dependencies.py  main.py
app/models/: __init__.py  models.py
app/routers/: auth.py  bookings.py  rooms.py  slots.py  users.py
app/schemas/: auth.py  bookings.py  rooms.py  slots.py  users.py
tests/: conftest.py  test_auth.py  test_endpoints.py
