[project]
name = "shift-booking"
version = "0.1.0"
description = "Сервис бронирования переговорных"
authors = [
    {name = "Данияр"}
]
license = "MIT"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)"
]
